Fixed an issue where user colors wouldnt change on the list
Added scrollbar to chat
Todo: Make chat scroll to bottom automatically when receiving a new message (only if chat is already scrolled down)

--- a/stylesheet.css
+++ b/stylesheet.css
@@ -90,7 +90,7 @@ label[for="msg"]{
 }
 
 #chat {
-	min-height:40vh;
+	height:40vh;
 	overflow:auto;
 	padding:1em;
 	grid-area:chat;
